--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,5 +21,8 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <meta-data
+        android:name="com.amap.api.v2.apikey"
+        android:value="7d83db8f98570b54a75ebaf1dfc0061a" />
     </application>
 </manifest>
